--- a/examples/hibayes-usecase1/dvc.yaml
+++ b/examples/hibayes-usecase1/dvc.yaml
@@ -9,12 +9,22 @@ stages:
     params:
       - files/config.yaml:
         - data_loader
-  model:
-    cmd: hibayes-model --config files/config.yaml --data .output/load/data.parquet
-      --out .output/model/
+
+  process:
+    cmd: hibayes-process --config files/config.yaml --data .output/load/data.parquet --out .output/process/
     deps:
     - ../../src/hibayes/
     - .output/load/data.parquet
+    outs:
+    - .output/process/
+    params:
+      - files/config.yaml:
+        - data_process
+  model:
+    cmd: hibayes-model --config files/config.yaml --analysis-state .output/process/ --out .output/model/
+    deps:
+    - ../../src/hibayes/
+    - .output/process/
     outs:
     - .output/model/
     params:
