Updating yaml format so that path and obj for registry are specified separately to avoid unecessary custom_x import code. Also added some more comprehensive data processor unit tests

--- a/examples/hibayes-usecase1/dvc.yaml
+++ b/examples/hibayes-usecase1/dvc.yaml
@@ -30,7 +30,7 @@ stages:
     params:
       - files/config.yaml:
         - model
-        - checkers
+        - check
         - platform
   communicate:
     cmd: hibayes-comm --config files/config.yaml --analysis_state .output/model/ --out .output/communicate/
@@ -41,4 +41,4 @@ stages:
     - .output/communicate/
     params:
       - files/config.yaml:
-        - communicators
+        - communicate
