--- a/examples/hibayes-usecase1/files/config.yaml
+++ b/examples/hibayes-usecase1/files/config.yaml
@@ -11,7 +11,7 @@ data_loader:
       classes:
         - Domains
 data_process:
-  data_process:
+  processors:
     - map_columns: {column_mapping: {domain: group}}
     - groupby: {groupby_columns: [group]}
     - extract_features: {feature_names: [n_total]}
@@ -25,8 +25,8 @@ model:
         tag: version_1
 
 platform:
-checkers:
-  checks:
+check:
+  checkers:
     - prior_predictive_plot: {plot_proportion: true}
     - r_hat
     - divergences
@@ -36,7 +36,7 @@ checkers:
     - bfmi
     - posterior_predictive_plot: {plot_proportion: true, plot_kwargs: {num_pp_samples: 50}}
     - waic
-communicators:
+communicate:
   communicate:
     - forest_plot: {combined: true}
     - trace_plot
