--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pyarrow>=20.0.0",
     "fastparquet>=2024.11.0",
     "dvc>=3.59.1",
+    "dill>=0.4.0",
 ]
 
 [tool.hatch.metadata]
