--- a/examples/skewed_score/q1_1/files/config.yaml
+++ b/examples/skewed_score/q1_1/files/config.yaml
@@ -1,26 +1,16 @@
 data_process:
   processors:
     - extract_observed_feature: {feature_name: score} # 0-10 rating
-    - extract_predictors: {predictor_names: [grader, LLM]}
+    - extract_predictors: {predictor_names: [grader, LLM], effect_coding_for_main_effects: true}
 
 model:
-  path: files/custom_model.py
+  path: ../custom_model.py
   models:
     - name: ordered_logistic_model
       config:
         tag: version_1
-        main_effects: ["grader", "LLM"]
-        interactions: [["grader", "LLM"]]
-        num_classes: 11  # for 0-10 scale
-        effect_coding_for_main_effects: true
-        fit:
-          samples: 2000
-          chains: 4
-    - name: ordered_logistic_model
-      config:
-        tag: version_2
         main_effects: ["grader"]
-        num_classes: 11
+        num_classes: 11  # for 0-10 scale
         effect_coding_for_main_effects: true
         fit:
           samples: 2000
@@ -36,13 +26,11 @@ check:
     - waic
 
 communicate:
-  path: files/custom_communicators.py
+  path: ../custom_communicators.py
   communicators:
     - cutpoint_plot
     - ordered_residuals_plot
     - category_frequency_plot
-    - forest_plot: {vars: ["b_grader"]}
-    - forest_plot: {vars: ["b_LLM"]}
-    - forest_plot
+    - forest_plot: {vars: ["grader_effects"], combined: true}
+    - forest_plot: {combined: true}
     - summary_table
-    - model_comparison_plot
