--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    # Other dependencies remain the same
     "matplotlib>=3.10.1",
     "pandas>=2.2.3",
     "tqdm>=4.67.1",
@@ -23,6 +22,7 @@ dependencies = [
     "pyarrow>=20.0.0",
     "fastparquet>=2024.11.0",
     "dvc>=3.59.1",
+    "dvc-s3>=3.2.2",
     "dill>=0.4.0",
 ]
 
