load in display stats from previous stages + create analysis state during the loading stage

--- a/examples/hibayes-usecase1/dvc.yaml
+++ b/examples/hibayes-usecase1/dvc.yaml
@@ -11,10 +11,10 @@ stages:
         - data_loader
 
   process:
-    cmd: hibayes-process --config files/config.yaml --data .output/load/data.parquet --out .output/process/
+    cmd: hibayes-process --config files/config.yaml --analysis-state .output/load/ --out .output/process/
     deps:
     - ../../src/hibayes/
-    - .output/load/data.parquet
+    - .output/load/
     outs:
     - .output/process/
     params:
