finally porting over the extractors to the functional setup + removing deprecated models

--- a/examples/hibayes-usecases/usecase1/files/config.yaml
+++ b/examples/hibayes-usecases/usecase1/files/config.yaml
@@ -4,12 +4,10 @@ data_loader:
       - ../data/gpt-4o
 
   extractors:
+    path: ../files/custom_extractor.py
     enabled:
-      - base
-    custom:
-      path: ../files/custom_extractor.py
-      classes:
-        - Domains
+      - base_extractor  # Built-in functional extractor
+      - domains_extractor  # Custom functional extractor from the path above
 data_process:
   processors:
     - map_columns: {column_mapping: {domain: group}}
