--- a/examples/hibayes-usecases/usecase2/files/config.yaml
+++ b/examples/hibayes-usecases/usecase2/files/config.yaml
@@ -3,12 +3,10 @@ data_loader:
     files_to_process:
       - ../data/
   extractors:
+    path: ../files/custom_extractor.py
     enabled:
-      - base
-    custom:
-      path: ../files/custom_extractor.py
-      classes:
-        - Domains
+      - base_extractor  # Built-in functional extractor
+      - domains_extractor  # Custom functional extractor from the path above
 data_process:
   processors:
     - map_columns: {column_mapping: {model: group, domain: subgroup, sub_domain: subsubgroup}}
