adding details on checkers and some other touch ups

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -35,7 +35,9 @@ website:
             - loaders.qmd
             - processors.qmd
             - models.qmd
+            - checkers.qmd
             - communicators.qmd
+            - analysis-state.qmd
         - section: "Examples"
           contents:
             - examples/hibayes-usecases.qmd
