flesh out getting started docs and update package version

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -37,6 +37,7 @@ website:
             - models.qmd
             - checkers.qmd
             - communicators.qmd
+            - platform.qmd
             - analysis-state.qmd
         - section: "Examples"
           contents:
