--- a/examples/skewed_score/q2/files/config.yaml
+++ b/examples/skewed_score/q2/files/config.yaml
@@ -4,7 +4,6 @@ data_process:
     - extract_predictors: {predictor_names: [grader, LLM], effect_coding_for_main_effects: true, interactions: true}
 
 model:
-  path: ../custom_model.py
   models:
     - name: ordered_logistic_model
       config:
@@ -27,12 +26,12 @@ model:
           chains: 4
 check:
   checkers:
-    - prior_predictive_plot
+    - prior_predictive_plot: {interactive: false}
     - divergences
     - r_hat
     - ess_bulk
     - ess_tail
-    - posterior_predictive_plot
+    - posterior_predictive_plot: {interactive: false}
     - waic
 
 communicate:
