--- a/examples/hibayes-usecases/usecase2/files/config.yaml
+++ b/examples/hibayes-usecases/usecase2/files/config.yaml
@@ -11,8 +11,7 @@ data_process:
   processors:
     - map_columns: {column_mapping: {model: group, domain: subgroup, sub_domain: subsubgroup}}
     - groupby: {groupby_columns: [group, subgroup, subsubgroup]}
-    - extract_features: {feature_names: [n_total]}
-    - extract_predictors: {predictor_names: [group, subgroup, subsubgroup]}
+    - extract_features: {continuous_features: [n_total], categorical_features: [group, subgroup, subsubgroup]}
     - extract_observed_feature: {feature_name: n_correct}
 
 model:
