--- a/examples/skewed_score/q2/files/config.yaml
+++ b/examples/skewed_score/q2/files/config.yaml
@@ -1,7 +1,7 @@
 data_process:
   processors:
     - extract_observed_feature: {feature_name: score} # 0-10 rating
-    - extract_predictors: {predictor_names: [grader, LLM], effect_coding_for_main_effects: true, interactions: true}
+    - extract_features: {categorical_features: [grader, LLM], effect_coding_for_main_effects: true, interactions: true}
 
 model:
   models:
